# lvm_snr_spectrospatial

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: 1_nii.ipynb  1_nii_sep_kernels.ipynb  2_ha.ipynb  3_oiii.ipynb  4_sii.ipynb  two_line_sep_kernels.py
scripts/: read_data.py
scripts/models/: two_lines.py
