[project]
name = "lvm-snr-spectrospatial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astropy>=7.2.0",
    "cmasher>=1.9.2",
    "ipykernel>=7.2.0",
    "lvm-tools>=0.0.10",
    "matplotdrip>=2.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "scipy>=1.17.0",
    "spectracles>=0.5.5",
]
